poc: [fix] solving issue with menu shifting

--- a/src/components/account/styles.module.scss
+++ b/src/components/account/styles.module.scss
@@ -1,9 +1,7 @@
 .container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
   gap: 2rem;
 }
 
@@ -18,7 +16,7 @@
   justify-content: space-between;
 }
 
-.request {
+.card {
   width: 24%;
   margin: 0.5rem 0.1rem;
 }
