--- a/src/uikit/card-wrapper/styles.module.scss
+++ b/src/uikit/card-wrapper/styles.module.scss
@@ -4,7 +4,6 @@
   border-radius: 1.2rem;
   box-shadow: $card-shadow;
   background-color: white;
-  padding: 0.4rem;
   width: 100%;
   padding: 1.3rem;
   display: flex;
